dev/data/envoy/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 80
  access_log_path: /tmp/admin_access.log
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 8888
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                common_http_protocol_options:
                  idle_timeout: 600s         # 可选：设置连接空闲超时时间
                  max_connection_duration: 60s   # 可选：设置最大连接持续时间
                access_log:
                  name: envoy.access_loggers.file
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                    path: /dev/stdout
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: grpc_service
                      domains: [ "*" ]
                      routes:
                        # 添加user访问swagger的路由
                        - match: { prefix: "/user/sw" }
                          route: { cluster: user_sw_cluster }
                        - match: { prefix: "/user/v1" }
                          route: { cluster: user_sw_cluster }
                        - match: { prefix: "/user" }
                          route: { cluster: user_cluster, timeout: 0s}

                        # 添加organization访问swagger的路由
                        - match: { prefix: "/organization/sw" }
                          route: { cluster: organization_sw_cluster }
                        - match: { prefix: "/organization/v1" }
                          route: { cluster: organization_sw_cluster }
                        - match: { prefix: "/organization" }
                          route: { cluster: organization_cluster, timeout: 0s }

                        # 添加thirdparty访问swagger的路由
                        - match: { prefix: "/third_party/sw" }
                          route: { cluster: thirdparty_sw_cluster }
                        - match: { prefix: "/third_party/v1" }
                          route: { cluster: thirdparty_sw_cluster }
                        - match: { prefix: "/third_party" }
                          route: { cluster: thirdparty_cluster, timeout: 0s  }

                        # 添加了admin访问swagger的路由
                        - match: { prefix: "/admin/sw" }
                          route: { cluster: admin_sw_cluster }
                        - match: { prefix: "/admin/v1" }
                          route: { cluster: admin_sw_cluster }
                        - match: { prefix: "/admin.v1" }
                          route: { cluster: admin_sw_cluster }
                        - match: { prefix: "/admin" }
                          route: { cluster: admin_cluster, timeout: 0s  }

                        # 添加了chat访问swagger的路由
                        - match: { prefix: "/chat/sw" }
                          route: { cluster: chat_sw_cluster }
                        - match: { prefix: "/chat/v1" }
                          route: { cluster: chat_sw_cluster }
                        - match: { prefix: "/chat" }
                          route: { cluster: chat_cluster, timeout: 0s  }

                        # 添加了content访问swagger的路由
                        - match: { prefix: "/content/sw" }
                          route: { cluster: content_sw_cluster }
                        - match: { prefix: "/content/v1" }
                          route: { cluster: content_sw_cluster }
                        - match: { prefix: "/content" }
                          route: { cluster: content_cluster, timeout: 0s  }

                        # 添加了enterprise访问swagger的路由
                        - match: { prefix: "/enterprise/sw" }
                          route: { cluster: enterprise_sw_cluster }
                        - match: { prefix: "/enterprise/v1" }
                          route: { cluster: enterprise_sw_cluster }
                        - match: { prefix: "/enterprise" }
                          route: { cluster: enterprise_cluster, timeout: 0s  }

                        # 添加了resume访问swagger的路由
                        - match: { prefix: "/resume/sw" }
                          route: { cluster: resume_sw_cluster }
                        - match: { prefix: "/resume/v1" }
                          route: { cluster: resume_sw_cluster }
                        - match: { prefix: "/resume" }
                          route: { cluster: resume_cluster, timeout: 0s  }
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: user_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      http2_protocol_options: { }
      common_http_protocol_options:
        idle_timeout: 600s         # 可选：设置连接空闲超时时间
        max_connection_duration: 1800s   # 可选：设置最大连接持续时间
      load_assignment:
        cluster_name: user_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 8097
                    hostname: user
                  address:
                    socket_address: { address: user, port_value: 8097 }


    - name: user_sw_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      load_assignment:
        cluster_name: user_sw_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 18097
                    hostname: user
                  address:
                    socket_address: { address: user, port_value: 18097 }

    - name: organization_sw_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      load_assignment:
        cluster_name: organization_sw_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 18094
                    hostname: organization
                  address:
                    socket_address: { address: organization, port_value: 18094 }


    - name: organization_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      http2_protocol_options: { }
      load_assignment:
        cluster_name: organization_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 8094
                    hostname: organization
                  address:
                    socket_address: { address: organization, port_value: 8094 }



    - name: thirdparty_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      http2_protocol_options: { }
      load_assignment:
        cluster_name: thirdparty_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 8096
                    hostname: thirdparty
                  address:
                    socket_address: { address: thirdparty, port_value: 8096 }

    - name: thirdparty_sw_cluster
      type: STRICT_DNS
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: thirdparty_sw_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 18096
                    hostname: thirdparty
                  address:
                    socket_address: { address: thirdparty, port_value: 18096 }
    - name: admin_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      http2_protocol_options: { }
      load_assignment:
        cluster_name: admin_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 8090
                    hostname: admin
                  address:
                    socket_address: { address: admin, port_value: 8090 }

    - name: admin_sw_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
#      http2_protocol_options: { }
      load_assignment:
        cluster_name: admin_sw_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 18090
                    hostname: admin
                  address:
                    socket_address: { address: admin, port_value: 18090 }


    - name: chat_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      http2_protocol_options: { }
      load_assignment:
        cluster_name: chat_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 8091
                    hostname: chat
                  address:
                    socket_address: { address: chat, port_value: 8091 }

    - name: chat_sw_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      load_assignment:
        cluster_name: chat_sw_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 18091
                    hostname: chat
                  address:
                    socket_address: { address: chat, port_value: 18091 }



    - name: content_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      http2_protocol_options: { }
      load_assignment:
        cluster_name: content_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 8092
                    hostname: content
                  address:
                    socket_address: { address: content, port_value: 8092 }
    - name: content_sw_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      load_assignment:
        cluster_name: content_sw_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 18092
                    hostname: content
                  address:
                    socket_address: { address: content, port_value: 18092 }




    - name: enterprise_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      http2_protocol_options: { }
      load_assignment:
        cluster_name: enterprise_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 8093
                    hostname: enterprise
                  address:
                    socket_address: { address: enterprise, port_value: 8093 }

    - name: enterprise_sw_cluster
      type: STRICT_DNS
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: enterprise_sw_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 18093
                    hostname: enterprise
                  address:
                    socket_address: { address: enterprise, port_value: 18093 }


    - name: resume_cluster
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      http2_protocol_options: { }
      load_assignment:
        cluster_name: resume_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 8095
                    hostname: resume
                  address:
                    socket_address: { address: resume, port_value: 8095 }


    - name: resume_sw_cluster
      type: STRICT_DNS
      common_http_protocol_options:
        max_connection_duration: 1800s # 设置最大连接持续时间为30分钟
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: resume_sw_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  health_check_config:
                    port_value: 18095
                    hostname: resume
                  address:
                    socket_address: { address: resume, port_value: 18095 }
